# python-project-lvl4

./: .env  .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: index.html  test.html
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_task_tags_task_labels_alter_task_author_and_more.py  0002_status_alter_user_created_at.py  0003_label_task.py  0004_alter_task_status.py  0005_task_created_at.py
tasks/templates/tasks/: base.html  delete.html  delete_status.html  index.html  statuses.html  update.html  update_status.html  users.html
tasks/templates/tasks/labels/: create_label.html
tasks/templates/tasks/statuses/: create_status.html
tasks/templates/tasks/tasks/: create_task.html  delete_task.html  task.html  tasks.html  update_task.html
tasks/templates/tasks/users/: login.html  register.html
translations/locale/ru/LC_MESSAGES/: django.po
